# labs

./: LICENSE  README.md
Bio/: README.md
Bio/bio_lab0/: output.txt  trunc for 55
Bio/bio_lab1/: DNAfull.txt  ans.txt  blosum62.txt  fasta.txt  tests.txt  zavyalov_lab1_iu9_72b.goodtxt
Bio/bio_lab2_hirchberg/: default.txt
Bio/bio_lab3_affine/: fasta.txt  tests.txt
C/: 1.c  10.c  11.c  12.c  13.c  14.c  15.c  16.c  17.c  18.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c  README.md
C++/: README.md
C++/LAB10/: main.cpp
C++/LAB7/: CMakeLists.txt  main.cpp
C++/LAB8/: CMakeLists.txt  main.cpp
C++/LAB9/: CMakeLists.txt
C++/serv1/: CMakeLists.txt  main.cpp  textstats.cpp  textstats.h
C++/serv2/: CMakeLists.txt  count_small.txt  main.cpp
Go/ftp_server/: ftp_serv.go  tst.go
Go/smtp_server/: 1.go  2.go  3.go  4.go  5.go  pass.txt  server.crt  server.key
Go/ssh_server/: 1.02.go  1.go  2.01.go  2.go  id_rsa.pub  id_rsa.txt  ssh_185.go  ssh_2210.go  ssh_server.go
Go/web_parser/: parse.go  test.go
Go/web_parser2/: parse.go
Go/xmlcompare/: parse.go
Java/: README.md
Java/Calc/: 1.txt
Java/LAB2/: Test.java
LAB10/: CMakeLists.txt
LAB6/: CMakeLists.txt  Declaration.h  implemention.cpp
LAB7/: Declaration.h
LAB9/: declaration.h  main.cpp
OpenGL/: README.md
OpenGL/graflab6impr/: CMakeLists.txt  backlg1  backlg2  declaration.h  main.cpp  scene.txt
OpenGL/graflab7/: CMakeLists.txt  declaration.h  dump1  imp.cpp  main.cpp
VMLA/: README.md
Visualisation/: README.md
code_gen/lab2/: CMakeLists.txt  lab.txt  main.cpp
tofl/: README.md
(+57 files in other folders)
